<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/black">

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="729dp"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <EditText
            android:id="@+id/beforeUsed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/beforeUseKwh"
            android:textColorHint="#b6b3b2"
            android:textColor="#fff"
            android:inputType="numberDecimal"
            tools:ignore="Autofill" />

        <EditText
            android:id="@+id/lastUsed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/lastUseKwh"
            android:textColorHint="#b6b3b2"
            android:textColor="#fff"
            android:inputType="numberDecimal"
            android:minHeight="48dp"
            tools:ignore="Autofill" />

        <Button
            android:id="@+id/btnCalculate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/calculateBill" />

        <Button
            android:id="@+id/btnClear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/clear" />

        <TextView
            android:id="@+id/totalCostView"
            style="@style/GreenText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/final_cost"
            android:textAlignment="center"
            android:textSize="34sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/billDetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bill_details"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_marginTop="16dp" />

        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="142dp"
            android:stretchColumns="1">

            <TableRow>
                <TextView
                    android:layout_width="123dp"
                    android:layout_column="1"
                    android:padding="3dip"
                    android:text="@string/block_rate" />

                <TextView
                    android:padding="3dip"
                    android:text="@string/used" />

                <TextView
                    android:padding="3dip"
                    android:text="@string/rate" />

                <TextView
                    android:padding="3dip"
                    android:text="@string/total" />
            </TableRow>

            <View
                android:layout_height="2dip"
                android:background="#FF909090" />

            <TableRow>

                <TextView
                    android:id="@+id/level1"
                    android:layout_column="1"
                    android:padding="3dip"
                    android:text="@string/lessThan80" />

                <TextView
                    android:id="@+id/level1Used"
                    android:padding="3dip"
                    android:text="@string/_0" />

                <TextView
                    android:id="@+id/level1Cost"
                    android:padding="3dip"
                    android:text="@string/_0" />

                <TextView
                    android:id="@+id/total1"
                    android:layout_height="match_parent"
                    android:padding="3dip"
                    android:text="@string/_0" />
            </TableRow>

            <TableRow>

                <TextView
                    android:id="@+id/level2"
                    android:layout_column="1"
                    android:padding="3dip"
                    android:text="@string/_80_150_kwh" />

                <TextView
                    android:id="@+id/level2Used"
                    android:padding="3dip"
                    android:text="@string/_0" />

                <TextView
                    android:id="@+id/level2Cost"
                    android:padding="3dip"
                    android:text="@string/_0" />

                <TextView
                    android:id="@+id/total2"
                    android:padding="3dip"
                    android:text="@string/_0" />
            </TableRow>

            <TableRow>

                <TextView
                    android:id="@+id/level3"
                    android:layout_column="1"
                    android:padding="3dip"
                    android:text="@string/_150_kwh" />

                <TextView
                    android:id="@+id/level3Used"
                    android:padding="3dip"
                    android:text="@string/_0" />

                <TextView
                    android:id="@+id/level3Cost"
                    android:padding="3dip"
                    android:text="@string/_0" />

                <TextView
                    android:id="@+id/total3"
                    android:padding="3dip"
                    android:text="@string/_0" />
            </TableRow>

            <TableRow>

                <TextView
                    android:layout_column="1"
                    android:padding="10dip"
                    android:text="@string/total" />

                <TextView
                    android:id="@+id/totalUsed"
                    android:padding="10dip"
                    android:text="@string/_0" />

                <TextView
                    android:padding="10dip"
                    android:text="" />

                <TextView
                    android:id="@+id/total"
                    android:padding="10dip"
                    android:text="@string/_0" />
            </TableRow>
        </TableLayout>

        <TextView
            android:id="@+id/totalRebate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rebate_cost"
            android:layout_marginTop="8dp" />

        <TextView
            android:id="@+id/totalCost"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/total_cost"
            android:layout_marginTop="8dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

    </LinearLayout>

</RelativeLayout>